samples/_failures_safe/1761556691_7b4186_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a79184.c: In function ‘main’:
./samples/SAFE/__tmp_d7a79184.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
